# ETL

./: .env  README.md  database-diagram.mmd  docker-compose.yaml  profile.stats  pyproject.toml  requirements.txt
Docker/: new_docker-compose.yaml
data/processed/: brands.parquet  categories.parquet  customers.csv  customers.parquet  order_items.parquet  orders.csv  orders.parquet  products.parquet  staffs.csv  staffs.parquet  stocks.csv  stocks.parquet  stores.csv  stores.parquet
data/raw/api/: _main.py
data/raw/api/data/: orders.csv
data/raw/csv/: stores.csv
data/raw/db/db/: etl_db_setup.py
docs/: data_source_er.md  security_thoughts.md  thoughts.md
schema/: create_final_db.sql  get_dependencies.sql
scripts/: generate-docs.sh
sql/01-schema/: 01-create_schema.sql  02-create_tables.sql  03-create_user_permissions.sql  04-audit_trigger.sql  05-delete_inserts_by_user.sql  06-truncate_tables.sql
sql/02-procedures/: get_dependencies.sql
sql/schema/: baseline_integrated_db.sql  create_database.sql  create_user.sql  denormalised_integrated_db.sql  mysql_integrated_db.sql  psql_integrated_db.sql
sql/stored_procedures/: get_dependencies.sql  mysql_get_dependencies.sql
src/: config.py  connection.py  extract.py  main.py  requirements.txt  schema.py  table.py  transform.py  utils.py
