[project]
name = "etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "mysql-connector-python>=9.4.0",
    "pandas>=2.3.3",
    "psycopg[binary]>=3.2.12",
    "pyarrow>=22.0.0",
    "uuid>=1.30",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
    "snakeviz>=2.2.2",
]
